<resources>
    <string name="app_name" translatable="false">LoveMap</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="facebook_app_id" translatable="false">1137729193447265</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1137729193447265</string>
    <string name="facebook_client_token" translatable="false">e476c80ce861915681da79d9269cc0ee</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password again</string>
    <string name="register">Not a Lover yet?\nRegister</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_email">Invalid email address.</string>
    <string name="invalid_username">Username must be at least 3 characters long.</string>
    <string name="invalid_password">Password must be longer than 5 characters.</string>
    <string name="invalid_password_again">Password Again must match password.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_back">"Welcome back "</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="make_love">Make Love</string>
    <string name="logout">logout</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="your_profile">Your Profile 👤</string>
    <string name="your_loves">Your Love History 💞</string>
    <string name="discover_love_spots">Discover Love Spots 🧭</string>
    <string name="love_map">Love Map 💖</string>
    <string name="profileUserName"> -------- </string>
    <string name="profileUserLevelText"> - </string>
    <string name="profileShareableLink">Get shareable link</string>
    <string name="linkShareOff">Link Sharing Off</string>
    <string name="linkShareOn">Link Sharing On</string>
    <string name="private_profile">Private Profile 🤫</string>
    <string name="profileInPartnershipWith">Partnership status:</string>
    <string name="profilePartnersEmpty">No partner yet</string>
    <string name="profileRank">Current rank:</string>
    <string name="userOccupied">Username is occupied</string>
    <string name="emailOccupied">A user with this email already registered</string>
    <string name="invalidCredentials">Invalid credentials</string>
    <string name="invalidEmail">Invalid email address</string>
    <string name="invalidUsername">Length of name should be &gt;=3, &lt;=32 characters</string>
    <string name="invalidPassword">Invalid password</string>
    <string name="noServer">Cannot connect to server</string>
    <string name="points_to_next_level">Points to \nnext level</string>
    <string name="points">Points</string>
    <string name="reports_submitted">Reports submitted:</string>
    <string name="love_spots_added">Love Spots added:</string>
    <string name="number_of_loves">Number of Loves:</string>
    <string name="marker_rating">Rating:</string>
    <string name="marker_availability">Availability:</string>
    <string name="risk">Risk:</string>
    <string name="marker_description">Description:</string>
    <string name="marker_custom_availability">Custom availability:</string>
    <string name="available_all_day">All day</string>
    <string name="available_night_only">Night only</string>
    <string name="custom_availability_text">Custom availability</string>
    <string name="risk_unknown">Unknown</string>
    <string name="new_lovespot">New Love Spot</string>
    <string name="add_spot_name">Name</string>
    <string name="add_new_love_spot">Add new Love Spot</string>
    <string name="add_spot_description">How would you describe this Love Spot?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_spot_name">Name must be at least 3 chars long</string>
    <string name="invalid_spot_description">Description must be at least 5 chars long</string>
    <string name="love_spot_added">Love Spot added</string>
    <string name="report_spot">Report Spot</string>
    <string name="to_wishlist">To Wishlist</string>
    <string name="recordLoveMakingTitle">Record Love-Making</string>
    <string name="availability">Availability:</string>
    <string name="add_private_note">Private note about your experience trying this Love Spot</string>
    <string name="add_review_text">Public review of this Love Spot</string>
    <string name="riskLevelText">What is the risk of being caught in the act?</string>
    <string name="reviewStarsText">How good is this Love Spot?</string>
    <string name="lovemaking_recorded">Love-making recorded</string>
    <string name="also_made_love_here">I also made love here</string>
    <string name="switch_map_mode">Switch map mode</string>
    <string name="add_spot">Add spot</string>
    <string name="review_love_spot">Review Love Spot</string>
    <string name="love_spot_reviewed">Love Spot Reviewed</string>
    <string name="havent_made_love_on_this_spot_yet">Haven\'t made love on this spot yet</string>
    <string name="love_spot_details">Love Spot Details</string>
    <string name="night_only">Night only</string>
    <string name="title">Title</string>
    <string name="average_rating">Average Rating:</string>
    <string name="risk_based_on_reviewers">Risk based on reviews:</string>
    <string name="update">Update</string>
    <string name="your_review">Your Review:</string>
    <string name="user_reviews">User Reviews:</string>
    <string name="your_love_makings_here">Your Love-makings here:</string>
    <string name="happened_at">Happened at:</string>
    <string name="change">Change</string>
    <string name="select_partners">Select Partners:</string>
    <string name="add_partner">Add another</string>
    <string name="dummy_date">2022–04–03 12:11</string>
    <string name="no_partners_yet">No partners yet</string>
    <string name="not_app_user">Not app user</string>
    <string name="select_partner">Selected partner:</string>
    <string name="my_lovemap_profile_link">My LoveMap profile</string>
    <string name="share_subject">View my LoveMap profile with this link ;)</string>
    <string name="filter_view_other_lover">View Lover profile</string>
    <string name="yourRelationWith">Your Relation:</string>
    <string name="relationPlaceholder">Nothing</string>
    <string name="follow">Follow</string>
    <string name="requestPartnership">Request Partnership</string>
    <string name="nothing">Nothing</string>
    <string name="following">Following</string>
    <string name="partner">Partner</string>
    <string name="blocked">Blocked</string>
    <string name="already_have_a_partner">You already have a partner</string>
    <string name="partnership_already_requested">Partnership already requested</string>
    <string name="invalid_operation_on_yourself">Invalid operation on yourself</string>
    <string name="link_sharing_hint">
        <![CDATA[
        <ul>
            <li>With Link Sharing you can share your profile with others.</li><br>
            <li>He/She/It can use the link to add you as a Partner or follow your activities as a Follower.</li><br>
            <li>If you become Partners, you can manage your Love-makings together.</li><br>
            <li>If they become your Follower, they can see your activities. (Following feature is not yet implemented.)</li><br>
            <li>Turn off Link Sharing to render a link unusable. Generate a new link anytime.</li>
        </ul>
        ]]>
    </string>
    <string name="loadingDotDotDot">Loading…</string>
    <string name="have_not_made_love_review">Have not made love here yet. \nMake love here first to review.</string>
    <string name="have_not_made_love_here_yet">Have not made love here yet.</string>
    <string name="reports_received">Reports received:</string>
    <string name="meaningful_reviews">Meaningful reviews:</string>
    <string name="report_love_spot">Report Love Spot</string>
    <string name="add_report_text">Why do you want to report this Love Spot?</string>
    <string name="invalid_report_text">Report text must be longer than 5 characters.</string>
    <string name="report_love_spot_name_placeholder">-</string>
    <string name="loveSpotReported">Love Spot reported</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="partnership_request_text">This user has sent you a Partnership request.\nIf you accept it, you become Partners and you can manage your LoveMakings together.</string>
    <string name="itIsYou">This is you 😉</string>
    <string name="endPartnership">End Partnership</string>
    <string name="partnership_requested">Partnership requested</string>
    <string name="in_partnership">In Partnership</string>
    <string name="cancelRequest">Cancel Request</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="showing_your_love_makings">"Showing Your Love-makings "</string>
    <string name="showing_love_spots">Showing Love Spots</string>
    <string name="partner_colon">Partner:</string>
    <string name="your_love_makings_together">Your Love-makings together:</string>
    <string name="rating">Rating:</string>
    <string name="see_all">See All</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="love_spot_not_available">Love Spot not available</string>
    <string name="loveSpotDeleted">Love Spot deleted</string>
    <string name="show_on_map">Show on map</string>
    <string name="spotTooCloseToAnother"><![CDATA[LoveSpot too close to another. Min distance is > 20 meters.]]></string>
    <string name="invalidLoveSpotName">Name must be between 3 and 50 characters</string>
    <string name="invalidLoveSpotDescription">Description must be between 5 and 1000 characters</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="love_making_deleted">Love-making deleted</string>
    <string name="love_making_updated">Love-making updated</string>
    <string name="editLoveMakingTitle">Edit Love-making</string>
    <string name="partnershipNotFound">Partnership not found</string>
    <string name="editLoveSpotTitle">Edit Love Spot</string>
    <string name="request_code">Request Reset Code</string>
    <string name="prompt_reset_code">Reset Code</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_new_password_again">New Password Again</string>
    <string name="reset_code_explanation">Type your email, then press the \'Request Reset Code\' button.\n\nA Reset Code will be sent to your email address, that you have to copy to the \'Reset Code\' input box. Check your spam folder if you cannot find the email.\n\nThen specify your new password and press the \'Change Password\' button.</string>
    <string name="action_change_password">Change Password</string>
    <string name="type">Type:</string>
</resources>