<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.login.PasswordResetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/standard_10">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/standard_16"
            android:src="@drawable/transparent_logo" />

        <EditText
            android:id="@+id/resetEmail"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="15dp"
            android:autofillHints="emailAddress"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/requestCodeButton"
            android:layout_width="165dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/standard_16"
            android:backgroundTint="@color/myColorPrimary"
            android:enabled="false"
            android:text="@string/request_code"
            android:textColor="@color/myColorOnPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_code_explanation" />

        <EditText
            android:id="@+id/resetResetCode"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/standard_16"
            android:layout_marginHorizontal="@dimen/standard_50"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/prompt_reset_code"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/resetNewPassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/prompt_new_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/resetNewPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/prompt_new_password_again"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/resetChangePasswordButton"
            android:layout_width="165dp"
            android:layout_height="60dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/myColorPrimary"
            android:enabled="false"
            android:text="@string/action_change_password"
            android:textColor="@color/myColorOnPrimary" />

    </LinearLayout>
</ScrollView>