<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/standard_8">

    <TextView
        android:id="@+id/marker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_8"
        android:text="@string/title"
        android:textColor="@color/myColorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/marker_rating"
        android:textColor="@color/gray" />

    <RatingBar
        android:id="@+id/marker_review_rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/standard_16"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/type"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/marker_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/standard_16"
        android:text=" - "
        android:textColor="@color/myColorOnBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/risk"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/marker_risk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/risk_unknown"
        android:layout_marginStart="@dimen/standard_16"
        android:textColor="@color/myColorOnBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/marker_availability"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/marker_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/standard_16"
        android:text=" - "
        android:textColor="@color/myColorOnBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/marker_description"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/marker_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/standard_16"
        android:maxWidth="@dimen/standard_225"
        android:maxLines="5"
        android:textColor="@color/myColorOnBackground" />

    <TextView
        android:id="@+id/marker_custom_availability_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/marker_custom_availability"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/marker_custom_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/standard_16"
        android:maxWidth="@dimen/standard_75"
        android:textColor="@color/myColorOnBackground" />

</LinearLayout>