<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.main.lovespot.report.ReportLoveSpotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_8">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/report_love_spot" />

        <TextView
            android:id="@+id/reportLoveSpotName"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/report_love_spot_name_placeholder"
            android:textAlignment="center" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/addReportText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/add_report_text"
            android:inputType="textMultiLine"
            android:maxLines="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reportSpotCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_16"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_cancel_24"
                android:text="@string/cancel"
                android:textSize="@dimen/standard_10" />

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6" />

            <Button
                android:id="@+id/reportSpotSubmit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_16"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_done_24"
                android:enabled="false"
                android:text="@string/submit"
                android:textSize="@dimen/standard_10" />
        </LinearLayout>

    </LinearLayout>



</ScrollView>