<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:src="@drawable/transparent_logo_purple" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_height="65dp"
        android:layout_width = "match_parent"
        android:layout_marginTop="15dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:autofillHints="yes" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_height="65dp"
        android:layout_width = "match_parent"
        android:layout_marginTop="15dp"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        android:autofillHints="yes" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_height="65dp"
        android:layout_width = "match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username"
        android:autofillHints="yes" />

    <EditText
        android:id="@+id/reg_password_again"
        android:layout_height="65dp"
        android:layout_width = "match_parent"
        android:layout_marginTop="15dp"
        android:hint="@string/prompt_password_again"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        android:autofillHints="yes" />

    <Button
        android:id="@+id/reg_register"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_again"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/reg_loading"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_register"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>